--- a/Radix2_singlecore/CMakeLists.txt
+++ b/Radix2_singlecore/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Radix2_singlecore C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Radix2_singlecore main.c fft.c fft.h)
+add_executable(Radix2_singlecore main.c fft.c fft.h avr_complex.c avr_complex.h)
